--- a/configs/config.yml
+++ b/configs/config.yml
@@ -3,20 +3,22 @@ logger:
   path: stderr
 
 http:
-  addr: localhost:8081
+  addr: :8081
   write_timeout: 5s
   read_timeout: 5s
   handler_timeout: 5s
 
 grpc:
-  addr: localhost:8082
+  addr: :8082
 
 database:
-  connection_addr: rotator_user:rotator_pass@tcp(localhost:3315)/rotator?parseTime=true
+  connection_addr: rotator_user:rotator_pass@tcp(rotator_db:3306)/rotator?parseTime=true
   driver: mysql
+  reconnect_time: 2s
+  max_reconnect_retries: 5
 
 nats:
-  url: nats://localhost:4222
+  url: nats://rotator_nats:4222
   connect_timeout: 10s
   connect_time_wait: 1s
   reconnect_time: 2s
