--- a/deployments/.env
+++ b/deployments/.env
@@ -1,6 +1,12 @@
 DB_NAME=rotator
 DB_USER=rotator_user
 DB_PASSWORD=rotator_pass
-DB_ROOT_PASSWORD=root
+DB_ROOT_PASSWORD=root_pass
 DB_HOST=localhost
 DB_PORT=3315
+
+APP_HTTP_PORT=8888
+APP_GRPC_PORT=8880
+
+NATS_HTTP_PORT=8222
+NATS_PORT=4222
