--- a/deployments/docker-compose.yml
+++ b/deployments/docker-compose.yml
@@ -1,8 +1,10 @@
 version: "3"
 
 services:
-  rotator-db:
+  rotator_db:
     image: mysql:8.0
+    cap_add:
+      - SYS_NICE
     restart: always
     environment:
       MYSQL_DATABASE: ${DB_NAME}
@@ -11,19 +13,22 @@ services:
       MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
     volumes:
       - ./mysql/my.cnf:/etc/mysql/conf.d/my.cnf
-      - ./mysql/data:/var/lib/mysql
     ports:
       - ${DB_PORT}:3306
 
-#  rotator-api:
-#    build:
-#      context: ../
-#      dockerfile: ./build/Dockerfile
-#    ports:
-#      - 8082:8082
-
-  rotator-nats:
+  rotator_nats:
     image: nats:2.1.9-alpine3.12
     ports:
-      - 8222:8222
-      - 4222:4222
+      - ${NATS_HTTP_PORT}:8222
+      - ${NATS_PORT}:4222
+
+  rotator_api:
+    build:
+      context: ../
+      dockerfile: ./build/Dockerfile
+    ports:
+      - ${APP_HTTP_PORT}:8081
+      - ${APP_GRPC_PORT}:8082
+    depends_on:
+      - rotator_db
+      - rotator_nats
