--- a/deployments/docker-compose.yml
+++ b/deployments/docker-compose.yml
@@ -32,3 +32,11 @@ services:
     depends_on:
       - rotator_db
       - rotator_nats
+
+  rotator_migrations:
+    build:
+      context: ../
+      dockerfile: ./build/migrations.Dockerfile
+    command: ["rotator_db:3306", "-t", "60", "--", "/go/bin/goose", "mysql", "${DB_USER}:${DB_PASSWORD}@tcp(rotator_db:3306)/${DB_NAME}?parseTime=true", "up"]
+    depends_on:
+      - rotator_db
