--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,11 @@ jobs:
       script: go test -race -count=100 ./...
 
     - stage: "Tests"
+      name: "Integration tests"
+      install: go mod download
+      script: make integration-test
+
+    - stage: "Tests"
       name: "Build"
       install: go mod download
       script: go build -o rotator ./cmd
