--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ jobs:
     - stage: "Tests"
       name: "Integration tests"
       install: go mod download
-      script: make integration-test
+      script: ./scripts/integration-test.sh
 
     - stage: "Tests"
       name: "Build"
